# klondike_patterns

./: CMakeLists.txt  README.md  build.sh  run.sh
libcard/: CMakeLists.txt  card.cpp  card.hpp  cards.cpp  cards.hpp  deck.hpp
libcommand/: CMakeLists.txt  command.hpp  exit.cpp  exit.hpp  flip.cpp  flip.hpp  interpreter.cpp  interpreter.hpp  load.cpp  load.hpp  movement.cpp  movement.hpp  redo.cpp  redo.hpp  save.cpp  save.hpp  undo.cpp  undo.hpp
libgame/: CMakeLists.txt  board.cpp  board.hpp  game.cpp  game.hpp  klondike.hpp  undoitem.hpp
libpile/: CMakeLists.txt  foundation.hpp  pile.cpp  pile.hpp  remainder.hpp  tableau.hpp  waste.hpp
libutils/: string.hpp
libview/: CMakeLists.txt  boardview.cpp  boardview.hpp  cardview.cpp  cardview.hpp  commanddialog.hpp  commandview.cpp  commandview.hpp  console.cpp  console.hpp  gameview.cpp  gameview.hpp  pileview.cpp  pileview.hpp  windialog.hpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/testboard/: CMakeLists.txt  testboard.cpp  testboard.hpp
test/testcommand/: CMakeLists.txt  testmovement.cpp  testmovement.hpp
test/testdeck/: CMakeLists.txt  testdeck.cpp  testdeck.hpp
test/testpile/: CMakeLists.txt
test/testpile/testfoundation/: CMakeLists.txt  testfoundation.cpp  testfoundation.hpp
test/testpile/testtableau/: CMakeLists.txt  testtableau.cpp  testtableau.hpp
